# LLM-Length-Prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/examples/: first_trace.jsonl
configs/: README.md  base.yaml
configs/experiments/: alps_v1_manifest.json  stage1_prior.yaml  stage2_dynamic.yaml  stage3_benchmark.yaml
data/: README.md
data/prompts/: alps_v1_prompts.jsonl
docs/: README.md  autodl_5090_runbook.md  docker_4090_runbook.md  research_plan.md  server_runbook.md
models/: README.md
notebooks/: README.md
scripts/: README.md  build_prompt_manifest.py  collect_dataset.py  collect_traces.py  download_model.py  evaluate_prior.py  preflight_server.py  run_benchmark.py  train_dynamic.py  train_prior.py
src/: README.md
src/llm_length_prediction/: __init__.py  experiment.py
src/llm_length_prediction/data/: __init__.py  io.py  schema.py
src/llm_length_prediction/evaluation/: metrics.py
src/llm_length_prediction/instrumentation/: __init__.py  hooks.py  huggingface.py
src/llm_length_prediction/models/: __init__.py  dynamic.py  prior.py
src/llm_length_prediction/runtime/: __init__.py  model_paths.py
src/llm_length_prediction/serving/: __init__.py  simulator.py
tests/: README.md  test_experiment_contract.py  test_experiment_manifest.py  test_model_paths.py  test_prior_log1p.py  test_prompt_manifest.py  test_smoke.py
