[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-length-prediction"
version = "0.1.0"
description = "Serving-aware static and progressive LLM output-length prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]
hf = [
  "torch>=2.6",
  "transformers>=4.48",
]
model = [
  "torch>=2.6",
  "transformers>=4.48",
  "datasets>=3.2",
  "scikit-learn>=1.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
